[package]
name = "web-sys-demo"
version = "0.1.0"
authors = ["Chuck Rai <cprai@sfu.ca>"]
edition = "2018"
description = "A demo project using wasm-bindgen and web-sys to draw on a canvas."
repository = "https://github.com/cprai/web_sys_demo"
readme = "README.md"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
